gcc/testsuite/rust/rustc/ui/error-codes/E0620.rs
fn main() {
    let _foo = &[1_usize, 2] as [usize]; // { dg-error ".E0620." "" { target *-*-* } }
}

